--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,8 +75,8 @@
   }
 
   h1, h2, h3, h4, h5, h6 {
-    font-family: "gelica", sans-serif;
-    font-weight: 700;
+    font-family: "gin", serif;
+    font-weight: 400;
     font-style: normal;
   }
 
@@ -89,6 +89,12 @@
   .font-gelica {
     font-family: "gelica", sans-serif;
     font-weight: 700;
+    font-style: normal;
+  }
+  
+  .font-gin {
+    font-family: "gin", serif;
+    font-weight: 400;
     font-style: normal;
   }
 }
